<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Welcome Message TextView -->
    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_margin="70dp"/>

    <!-- About Message TextView -->
    <TextView
        android:id="@+id/about_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_message"
        android:gravity="center"
        android:layout_below="@id/welcome_text"
        android:layout_centerHorizontal="true"
        android:visibility="gone"/>

    <!-- GifImageView -->
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:foregroundGravity="center_horizontal"
        android:src="@drawable/beerpouring"
        android:layout_below="@id/about_text" />

    <!-- Buttons -->
    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gif"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <!-- First Button -->
        <Button
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/watch_menu"
            android:layout_marginEnd="20dp"
            android:visibility="gone"/>

        <!-- Second Button -->
        <Button
            android:id="@+id/table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reserve_table"
            android:visibility="gone"/>
    </LinearLayout>

    <!-- CardView -->
    <androidx.cardview.widget.CardView

        android:id="@+id/reserve_table_card_view"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:visibility="gone"
        android:background="@drawable/table_background">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/back_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/baseline_exit_to_app_24"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/reserve_table_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reserve_table"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_below="@id/exit_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reserve_desc"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_guests"
                        />

                    <Spinner
                        android:id="@+id/number_of_guests_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_vegan_guests"
                        />

                    <Spinner
                        android:id="@+id/number_of_vegetarian_guests_picker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown"
                        />
                </LinearLayout>

            </LinearLayout>
            <RadioGroup
                android:id="@+id/payment_method_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/preffered_paymant_mathod"/>

                <RadioButton
                    android:id="@+id/cash_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cash"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/credit_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credit" />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name_hint"
                    android:inputType="textPersonName"  />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name_hint"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/phone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_hint"
                    android:inputType="phone" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>

                <EditText
                    android:id="@+id/date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/select_date_hint"
                    android:inputType="datetime"
                    android:focusable="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_time"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp"/>


                <Spinner
                    android:id="@+id/time_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                     />

            </LinearLayout>


            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/i_m_ready"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/user_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reserve_table_card_view"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone" />


</RelativeLayout>
