<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@drawable/table_background">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/back_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/baseline_exit_to_app_24"
            app:iconPadding="8dp"
            app:iconTint="@color/black" />

        <TextView
            android:id="@+id/menu_explain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/menu_explain"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@id/exit_button_menu"
            />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="80dp"
            android:layout_marginTop="80dp"
            android:elevation="8dp"
             android:radius="50dp"
            app:cardBackgroundColor="#80FFFFFF"
            app:cardCornerRadius="30dp"
            app:cardUseCompatPadding="true"
            android:layout_below="@id/menu_explain"
            android:id="@+id/cv">

            <ImageButton
                android:id="@+id/selectedProductImageButton"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:padding="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/hbr"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/drinks_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinks_title"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/cv"
            />


        <TextView
            android:id="@+id/heiniken_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/heiniken_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@id/drinks_title"
            android:tag="hbr"/>



        <TextView
            android:id="@+id/wine_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/wine_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@id/heiniken_text"
            android:tag="wine"/>



        <TextView
            android:id="@+id/cola_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/cola_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@id/wine_text"
            android:tag="colabr"/>

        <TextView
            android:id="@+id/food_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/cola_text"/>


        <TextView
            android:id="@+id/chips_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/chips_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@id/food_title"
            android:tag="chipsbg"/>


        <TextView
            android:id="@+id/hotdog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/hotdog_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@id/chips_text"
            android:tag="hotdogbr"/>


        <TextView
            android:id="@+id/pizza_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/pizza_text"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_below="@id/hotdog_text"
            android:tag="pizzabr"
            />



    </RelativeLayout>

</ScrollView>
